Finally.... working battle system...
It looks like shit but it works, it'll need adjustments later. (attack window, simple functions for readability, fix the hearts' offset, the KO animation, etc.)

--- a/assets/shared/data/mouthman/mouthman-easy.json
+++ b/assets/shared/data/mouthman/mouthman-easy.json
@@ -5108,13 +5108,13 @@
 						162972.972972973,
 						3,
 						0,
-						"No Animation"
+						"Hey!"
 					],
 					[
 						162810.810810811,
 						3,
 						0,
-						"No Animation"
+						"Hey!"
 					],
 					[
 						162648.648648649,
